--- a/css/form.css
+++ b/css/form.css
@@ -1,7 +1,8 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #eee;
+  background-color: slategrey;
+ font: 150%/1.5 'Fira Code', monospace;
 }
 
 .form-signin {
@@ -15,6 +16,7 @@ body {
 }
 .form-signin {
   font-weight: normal;
+  color:#fff;
 }
 .form-signin .form-control {
   position: relative;
