--- a/css/form.css
+++ b/css/form.css
@@ -10,8 +10,8 @@ body {
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+ .form-signin-heading,
+.form-control {
   margin-bottom: 10px;
 }
 .form-signin {
