--- a/css/form.css
+++ b/css/form.css
@@ -4,7 +4,15 @@ body {
   background-color: slategrey;
  font: 150%/1.5 'Fira Code', monospace;
 }
-
+.pos{
+ position: absolute;
+  margin: auto;
+  top: 30%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 3px;
+}
 .form-signin {
   max-width: 330px;
   padding: 15px;
