--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,8 @@
-html{
-  height: 100%;
-}
-body{
-  height: 100%;
-  background-color: slategrey;
-  color: #fff;
-  font: 150%/1.5 'Fira Code', monospace;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items:center;
-  
+h1, h2{
+	width: 100%;
+	text-align: center;
+} 
+
+div{
+	margin-left: 1em;
 }
