--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@
 	margin-top:2em;
 }
 
-.modal-body{
-	color: red;
+.adminpanel{
+	margin-top:2em;
+	min-height:50vw;
+	border:solid 1px black;
+	
 }
